dao - fixes